Lay a trail for the secret lab in Yauhnn.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/mining-entrance.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/mining-entrance.html
@@ -1,11 +1,61 @@
-{% extends "dnd/abstract/base.html" %}
+{% extends "dnd/abstract/place.html" %}
 
-{% block content %}
+{% block title %}Mining entrance{% endblock %}
+{% block summary %}Entrance into the mines, gives access to the secret lab.{% endblock %}
+
+{% block events %}
+    <p>no events</p>
+{% endblock %}
+
+{% block locations %}
+    <p>
+        The entrance is located inside <a href="the-gildes.html">the gildes</a>.
+        Adventurers can move out and end up there.
+    </p>
+    
+    <p>Inside the mines there are a few connected area's:</p>
+    <ul>
+        <li>Guard posts in front of a big door.</li>
+        <li>Door leads to a tunnel that leads down.</li>
+        <li>Ends up in a rather big cave with an elevator.</li>
+        <li>Elevator goes 2 bowshots down into another guarded tunnel.</li>
+        <li>Tunnel splits here, left leads to a rather large mining complex.</li>
+        <li>Right is a north-west tunnel blocked quickly by a gate.</li>
+        <li>Gate can be opened by saying the password.</li>
+        <li>Behind the gate lies <a href="../../secret-lab/index.html">secret lab</a></li>
+    </ul>
 
     <p>Mines go down for a bit.</p>
     <p>Come at elevator that brings you 2 bowshots down.</p>
     <p>Taking the north west tunnel.</p>
     <p>There is a password gate there. (password mouther)</p>
     <p>They end up in the lab</p>
+{% endblock %}
 
+{% block achievements %}
+    <p>no achievements</p>
+{% endblock %}
+
+{% block creatures %}
+    <p>no creatures</p>
+{% endblock %}
+
+{% block traps %}
+    <p>no traps</p>
+{% endblock %}
+
+{% block conditions %}
+    <p>no conditions</p>
+{% endblock %}
+
+{% block knowledges %}
+   <p>no knowledges</p>
+{% endblock %}
+
+{% block items %}
+    <p>no items</p>
+{% endblock %}
+
+{% block misc %}
+    <p>no misc</p>
 {% endblock %}
