--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-gildes.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-gildes.html
@@ -32,7 +32,8 @@
     <ul>
         <li>Go to <a href="big-market">big market</a></li>
         <li>Go up the ramp to <a href="../noble-district/north-side-nobles.html">North side nobles</a></li>
-        <li>Go down the ramp to <a href="../noble-district/wannabe-nobles.html">wannebe nobles</a></li>
+        <li>Go down the ramp to <a href="../noble-district/wannabe-nobles.html">wannabe nobles</a></li>
+        <li>Go into <a href="mining-entrance.html">the mining entrance</a></li>
     </ul>
 {% endblock %}
 
@@ -58,6 +59,14 @@
         <dd>15 >= <a href="../../../characters/Wehna+clothing-merchant.html">Wehna Farschrik</a> has a huge amount of clothing stores and is part of the council</dd>
         <dd>15 >= <a href="../../../characters/Harar+wood-merchant.html">Harar Neubeek</a> has a huge amount of clothing stores and is part of the council</dd>
         <dd></dd>
+    </dl>
+
+    <dl class="dc">
+        <dt>GatherDC: (miners guild)</dt>
+        <dd>
+            20 >= Some miners are not happy about the closure of the relatively new north-west tunnel.
+            They think some treasure is kept from them by <a href="../../../characters/Dragbar+metal-merchant.html">Dragbar</a>
+        </dd>
     </dl>
 {% endblock %}
 
