Update links and bring some life to the trade-district.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/big-market/index.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/big-market/index.html
@@ -21,9 +21,9 @@
                 <li>Scale</li>
                 <li>Scale</li>
                 <li>Soutern exit to <a href="../city-center.html">South side warehouses</a></li>
-                <li>Northern exit to <a href="../the-gildes.html">North side warehouses</a></li>
-                <li>Ramp to <a href="../../noble-district/south-side-nobles.html">South side nobles</a></li>
-                <li>Ramp to <a href="../../noble-district/north-side-nobles.html">North side nobles</a></li>
+                <li>Northern exit to <a href="../the-gilds.html">North side warehouses</a></li>
+                <li>Ramp to <a href="../../residence-district/south-side-nobles.html">South side nobles</a></li>
+                <li>Ramp to <a href="../../residence-district/north-side-nobles.html">North side nobles</a></li>
             </ol>
             <h2>Inside</h2>
             <ol>
