--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-gilds.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-gilds.html
@@ -1,7 +1,7 @@
 {% extends "dnd/abstract/place.html" %}
 
-{% block title %}The Gildes{% endblock %}
-{% block summary %}District consisting for some part of warehouses, but is known for the gildes.{% endblock %}
+{% block title %}The Gilds{% endblock %}
+{% block summary %}District consisting for some part of warehouses, but is known for the gilds.{% endblock %}
 
 {% block events %}
     <p>no events</p>
@@ -13,7 +13,7 @@
         It is a residential area, but also has some influential gilds.
     </b></p>
 
-    <p>Apart from the warehouses this area harbors most guilds:</p>
+    <p>Apart from the warehouses this area harbors most gilds:</p>
     <ul>
         <li>Traders gild</li>
         <li>Wood workers gild</li>
@@ -70,5 +70,5 @@
 {% endblock %}
 
 {% block misc %}
-    <p>Both the buildings and the caves are used for storage.</p>
+    <p>The caves in this area are used for storage of goods that are about to be sold on the market.</p>
 {% endblock %}
