Adding some more facts to be discovered through GatherInformation later.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/city-center.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/city-center.html
@@ -56,6 +56,8 @@
         <dt>LocalDC:</dt>
         <dd>15 >= <a href="../../../characters/Otalan+food-and-drink-merchant.html">Otalan Hichek</a> owns most of the nightlife.</dd>
     </dl>
+    <p>About: Waukeen relic</p>
+    <p>About: Fake gold</p>
 {% endblock %}
 
 {% block items %}
