--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-gilds.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-gilds.html
@@ -63,6 +63,8 @@
             They think some treasure is kept from them by <a href="../../../characters/Dragbar+metal-merchant.html">Dragbar</a>
         </dd>
     </dl>
+    <p>About: looking for work, lawyer</p>
+    <p>About: leveraging wealth</p>
 {% endblock %}
 
 {% block items %}
