--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-goods.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-goods.html
@@ -53,6 +53,8 @@
         <dt>GatherDC:</dt>
         <dd>20 >= Warehouses are getting cramped. All eyes on the council to solve this problem.</dd>
     </dl>
+    <p>About: moving people from the slums into a different area.</p>
+    <p>About: lots of goods waiting to go to Cormyr</p>
 {% endblock %}
 
 {% block items %}
