Update the gilds

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-gilds.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-gilds.html
@@ -15,7 +15,7 @@
 
     <p>Apart from the warehouses this area harbors most gilds:</p>
     <ul>
-        <li>Traders gild</li>
+        <li><a href="traders-gild.html">Traders gild</a> (stock exchange)</li>
         <li>Wood workers gild</li>
         <li>Carpenter gild</li>
         <li>Smiths gild</li>
@@ -24,7 +24,11 @@
 
     <p>Some other venues:</p>
     <ul>
-        <li>There is an inn where lots of artisans and merchants come together. Elves pay double there, because there are quite a few lumberjacks with bad experiences.</li>
+        <li>
+            There is an inn where lots of artisans and merchants come together.
+            Elves pay double there, because there are quite a few lumberjacks with bad experiences.
+            Cormyr citizens are also frowned upon for their taxing system.
+        </li>
         <li>Illegal gamble house</li>
     </ul>
 
@@ -63,8 +67,19 @@
             They think some treasure is kept from them by <a href="../../../characters/Dragbar+metal-merchant.html">Dragbar</a>
         </dd>
     </dl>
-    <p>About: looking for work, lawyer</p>
-    <p>About: leveraging wealth</p>
+
+    <dl class="dc">
+        <dt>GatherDC: (inn)</dt>
+        <dd>10 >= Elves are a bunch of low-life tree huggers, standing in the way of progress.</dd>
+        <dd>15 >= Cormyr has a ridiculous tax system.</dd>
+        <dd>15 >= Olivet is fucking his own sister.</dd>
+        <dd>20 >= Red Whizard of Thay are planning to take over trade in magic.</dd>
+    </dl>
+
+    <dl class="dc">
+        <dt>LocalDC: (Sembia)</dt>
+        <dd>10 >= Cormyr doesn't put a high tax on its citizens, but do tax import heavily, which is bad for Sembian merchants.</dd>
+    </dl>
 {% endblock %}
 
 {% block items %}
