--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-goods.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-goods.html
@@ -51,10 +51,10 @@
 
     <dl class="dc">
         <dt>GatherDC:</dt>
-        <dd>20 >= Warehouses are getting cramped. All eyes on the council to solve this problem.</dd>
+        <dd>10 >= Warehouses are getting cramped. All eyes on the council to solve this problem.</dd>
+        <dd>20 >= Lots of goods waiting to go to Cormyr</dd>
+        <dd>25 >= Plans to move people from the slums into a different area.</dd>
     </dl>
-    <p>About: moving people from the slums into a different area.</p>
-    <p>About: lots of goods waiting to go to Cormyr</p>
 {% endblock %}
 
 {% block items %}
