More about FTG.

--- a/src/templatefiles/templates/dnd/concrete/groups/Faerun-trade-group.html
+++ b/src/templatefiles/templates/dnd/concrete/groups/Faerun-trade-group.html
@@ -1,2 +1,22 @@
+{% extends "dnd/abstract/base.html" %}
+
+{% block content %}
+    <p>
+        This group of merchants is forming an alliance to make more profit in the name of Waukeen.
+        Their biggest project is the Global Convoy Project.
+        This project consists of cutting transport costs/risks and evading taxes by teleporting past customs.
+        The heresy lies in that this group took loans as if they already made the profit.
+        Now the goods are stocked as long as the device is not ready.
+        Trade in this stock is currently blooming.
+    </p>
+    <p>The members of the council that form the FTG:</p>
+    <ul>
+        <li><a href="../characters/Valof+Waukeen-cleric.html">Valof</a> (head of Waukeen temple)</li>
+        <li><a href="../characters/Taduan+hulorn-animal-merchant.html">Taduan</a> (the Hulorn and cattle merchant)</li>
+        <li><a href="../characters/Olivet+Magic-merchant.html">Olivet</a></li>
+        <li><a href="../characters/Dragbar+metal-merchant.html">Dragbar</a> (steel and weapons merchant)</li>
+    </ul>
+{% endblock %}
+
 Members
 About Global Convoy Project
