Some facts about the Waukeen religion inside of temple.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/temple-of-Waukeen.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/temple-of-Waukeen.html
@@ -54,7 +54,23 @@
 {% endblock %}
 
 {% block knowledges %}
-    <p>no knowledges</p>
+    <dl class="dc">
+        <dt>ReligionDC || GatherDC: (Waukeen)</dt>
+        <dd>
+            10 >= Goddess of trade and the marketplace.
+            She loves money for all the things that you can do with it.
+            A society blooms if it has a lot of money and her followers try to make as much of it as possible.
+        </dd>
+        <dd>
+            15 >= A controversial aspect of Waukeen is that she creates money out of nothing for the sake of abundance.
+            Giving people without capital a loan will give them a better life and stimulate the community.
+            Another thing that raises eye brows left and right is that she facilitates illegal trade as much as legal trade.
+        </dd>
+        <dd>
+            20 >= Recently got back from being held prisoner in mortal form by Graz'zt.
+            Another enemy in the pantheon is Mask.
+        </dd>
+    </dl>
 {% endblock %}
 
 {% block items %}
