Update food market.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/food-market.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/food-market.html
@@ -1,7 +1,7 @@
 {% extends "dnd/abstract/place.html" %}
 
-{% block title %}No title{% endblock %}
-{% block summary %}No summary{% endblock %}
+{% block title %}Food market{% endblock %}
+{% block summary %}Area centered around trade of food.{% endblock %}
 
 {% block events %}
     <p>no events</p>
@@ -17,6 +17,7 @@
     <ul>
         <li>Food market</li>
         <li>Rangers guild (lots of rumors about Big Ant Island and Rafana)</li>
+        <li>Messengers guild</li>
     </ul>
 
     <p>From here adventurers can:</p>
