--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/overview.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/overview.html
@@ -15,5 +15,7 @@
         <li>There are 2 domes in the center of the city</li>
     </ul>
 
+    <p>Gather information: each area has its own. Men in the inn have other things to say than children in the street.</p>
+
 
 {% endblock %}
