--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html
@@ -26,7 +26,7 @@
 
 {% block achievements %}
     <ul>
-        <li>Walking the slumbs reveals opportunities to <a href="01-earning-on-the-side.html">earn on the side</a></li>
+        <li>Walking the slums reveals opportunities to <a href="01-earning-on-the-side.html">earn on the side</a></li>
         <li>Visiting the market will lead to <a href="02-the-assassination.html">assassination attempt</a></li>
     </ul>
 {% endblock %}
@@ -48,11 +48,22 @@
 {% endblock %}
 
 {% block knowledges %}
-    <p>About the shack everybody wakes up in:</p>
+
     <dl class="dc">
-        <dt>SurvivalDC:</dt>
+        <dt>SurvivalDC: (shack they wake up in)</dt>
         <dd> 15 >= Normally 4 to 6 creatures occupy this tiny space.</dd>
     </dl>
+
+    <dl class="dc">
+        <dt>LocalDC: (City)</dt>
+        <dd>5 >= Yauhnn is a city in <a href="../../places/Sembia.html">Sembia</a>.</dd>
+        <dd>10 >= 2 to 3 story buildings. Steeply pitched tile roofs. Open sewer channel on either side of the streets. There are 2 domes in the center of the city.</dd>
+        <dd>13 >= Noble houses are simple. Most have turrets.</dd>
+        <dd>15 >= They know something about <a href="../../groups/Yauhnn-merchant-council.html">the council</a>.</dd>
+    </dl>
+
+
+
 {% endblock %}
 
 {% block items %}
@@ -60,5 +71,5 @@
 {% endblock %}
 
 {% block misc %}
-    <p>no misc</p>
+    <p>Gather information: each area has its own. Men in the inn have other things to say than children in the street.</p>
 {% endblock %}
