Update gild to guild again (facepalm)

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/slums-market.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/slums-market.html
@@ -90,7 +90,7 @@
     <ul>
         <li>Breath: stand to breath the sea air at <a href="breakers-slums.html">breaker slums</a> for an hour</li>
         <li>Eat: eat a fish prepared by <a href="../../../characters/Otalan+food-and-drink-merchant.html">Otalan</a>.</li>
-        <li>Drink: get drunk in master brewery at <a href="../trade-district/the-gilds.html">the gildes</a>.</li>
+        <li>Drink: get drunk in master brewery at <a href="../trade-district/the-guilds.html">the guilds</a>.</li>
         <li>
             Sex: Visit brothel at
             <a href="../trade-district/harbor/the-oceans-night+pleasure-house.html">The Oceans Night</a>.
