--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/big-market/index.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/big-market/index.html
@@ -21,7 +21,7 @@
                 <li>Scale</li>
                 <li>Scale</li>
                 <li>Soutern exit to <a href="../city-center.html">South side warehouses</a></li>
-                <li>Northern exit to <a href="../the-gilds.html">North side warehouses</a></li>
+                <li>Northern exit to <a href="../the-guilds.html">North side warehouses</a></li>
                 <li>Ramp to <a href="../../residence-district/south-side-nobles.html">South side nobles</a></li>
                 <li>Ramp to <a href="../../residence-district/north-side-nobles.html">North side nobles</a></li>
             </ol>
