--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/mining-entrance.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/mining-entrance.html
@@ -9,7 +9,7 @@
 
 {% block locations %}
     <p>
-        The entrance is located inside <a href="the-gilds.html">the gildes</a>.
+        The entrance is located inside <a href="the-guilds.html">the guilds</a>.
         Adventurers can move out and end up there.
     </p>
     
