--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-goods.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-goods.html
@@ -16,7 +16,7 @@
 
     <p>From here adventurers can:</p>
     <ul>
-        <li>Go to <a href="the-gilds.html">the gildes</a></li>
+        <li>Go to <a href="the-guilds.html">the guilds</a></li>
         <li>Go up the ramp to <a href="../residence-district/north-side-nobles.html">North side nobles</a></li>
         <li>Or up the ramp to <a href="../residence-district/captain-huts.html">Captain huts</a></li>
         <li>Go down the ramp to <a href="../residence-district/dock-nobles.html">the dock nobles</a></li>
