--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-guilds.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/the-guilds.html
@@ -1,7 +1,7 @@
 {% extends "dnd/abstract/place.html" %}
 
-{% block title %}The Gilds{% endblock %}
-{% block summary %}District consisting for some part of warehouses, but is known for the gilds.{% endblock %}
+{% block title %}The Guilds{% endblock %}
+{% block summary %}District consisting for some part of warehouses, but is known for the guilds.{% endblock %}
 
 {% block events %}
     <p>no events</p>
@@ -10,16 +10,16 @@
 {% block locations %}
     <p><b>
         On the other side of the big market than the <a href="city-center.html">city center</a> and less "touristic".
-        It is a residential area, but also has some influential gilds.
+        It is a residential area, but also has some influential guilds.
     </b></p>
 
-    <p>Apart from the warehouses this area harbors most gilds:</p>
+    <p>Apart from the warehouses this area harbors most guilds:</p>
     <ul>
-        <li><a href="traders-gild.html">Traders gild</a> (stock exchange)</li>
-        <li>Wood workers gild</li>
-        <li>Carpenter gild</li>
-        <li>Smiths gild</li>
-        <li>Miners gild</li>
+        <li><a href="traders-guild.html">Traders guild</a> (stock exchange)</li>
+        <li>Wood workers guild</li>
+        <li>Carpenter guild</li>
+        <li>Smiths guild</li>
+        <li>Miners guild</li>
     </ul>
 
     <p>Some other venues:</p>
