--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/traders-guild.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/traders-guild.html
@@ -1,7 +1,7 @@
 {% extends "dnd/abstract/place.html" %}
 
-{% block title %}Traders Gild{% endblock %}
-{% block summary %}A luxurious gild for all merchants. Stock is "exchanged" here.{% endblock %}
+{% block title %}Traders Guild{% endblock %}
+{% block summary %}A luxurious guild for all merchants. Stock is "exchanged" here.{% endblock %}
 {% block todo %}Make selling pitch for Falok. What is in the offices? Lawyer work?{% endblock %}
 
 {% block events %}
@@ -32,7 +32,7 @@
 
     <p>
         On the first floor are offices.
-        It contains administration about gild members and ...
+        It contains administration about guild members and ...
     </p>
 {% endblock %}
 
