--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/03-first-night-in-town.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/03-first-night-in-town.html
@@ -12,7 +12,7 @@
     <ul>
         <li>Visit the <a href="../../places/Yauhnn/slums-district/the-horrid-lust+pirate-inn.html">Horrid Lust</a></li>
         <li>Visit the <a href="../../places/Yauhnn/trade-district/harbor/the-oceans-night+pleasure-house.html">Ocean's Lust</a>.</li>
-        <li>Visit the nightlife at <a href="../../places/Yauhnn/trade-district/the-gilds.html">the gildes</a></li>
+        <li>Visit the nightlife at <a href="../../places/Yauhnn/trade-district/the-guilds.html">the guilds</a></li>
     </ul>
 {% endblock %}
 
