Add basic template to empty regions.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/dock-nobles.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/residence-district/dock-nobles.html
@@ -1,4 +1,46 @@
-<p>Mines lie behind this area. The air is filled with miners dust.</p>
-<p>It used to be a poor part of the city, but thanks to FTG it is blooming business.</p>
+{% extends "dnd/abstract/place.html" %} {# TODO: update #}
 
-<p>About: Fake gold</p>
+{% block title %}No title{% endblock %}
+{% block summary %}No summary{% endblock %}
+
+{% block events %}
+    <p>no events</p>
+{% endblock %}
+
+{% block locations %}
+    <p>no locations</p>
+
+    <p>Mines lie behind this area. The air is filled with miners dust.</p>
+    <p>It used to be a poor part of the city, but thanks to FTG it is blooming business.</p>
+
+    <p>About: Fake gold</p>
+{% endblock %}
+
+{% block achievements %}
+    <p>no achievements</p>
+{% endblock %}
+
+{% block creatures %}
+    <p>no creatures</p>
+{% endblock %}
+
+{% block traps %}
+    <p>no traps</p>
+{% endblock %}
+
+{% block conditions %}
+    <p>no conditions</p>
+{% endblock %}
+
+{% block knowledges %}
+   <p>no knowledges</p>
+{% endblock %}
+
+{% block items %}
+    <p>no items</p>
+{% endblock %}
+
+{% block misc %}
+    <p>no misc</p>
+{% endblock %}
+
