--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/library.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/library.html
@@ -1,1 +1,41 @@
-A whizard of Thay that knows a bit about The Phase Spider works here.
+{% extends "dnd/abstract/place.html" %} {# TODO: update #}
+
+{% block title %}No title{% endblock %}
+{% block summary %}No summary{% endblock %}
+
+{% block events %}
+    <p>no events</p>
+{% endblock %}
+
+{% block locations %}
+    <p>no locations</p>
+{% endblock %}
+
+{% block achievements %}
+    <p>no achievements</p>
+{% endblock %}
+
+{% block creatures %}
+    <p>A whizard of Thay that knows a bit about The Phase Spider works here.</p>
+{% endblock %}
+
+{% block traps %}
+    <p>no traps</p>
+{% endblock %}
+
+{% block conditions %}
+    <p>no conditions</p>
+{% endblock %}
+
+{% block knowledges %}
+   <p>no knowledges</p>
+{% endblock %}
+
+{% block items %}
+    <p>no items</p>
+{% endblock %}
+
+{% block misc %}
+    <p>no misc</p>
+{% endblock %}
+
