--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/mining-entrance.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/mining-entrance.html
@@ -22,7 +22,7 @@
         <li>Tunnel splits here, left leads to a rather large mining complex.</li>
         <li>Right is a north-west tunnel blocked quickly by a gate.</li>
         <li>Gate can be opened by saying the password.</li>
-        <li>Behind the gate lies <a href="../../secret-lab/index.html">secret lab</a></li>
+        <li>Behind the gate lies a <a href="../../secret-lab/index.html">secret lab</a></li>
     </ul>
 
     <p>Mines go down for a bit.</p>
