--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/poor-mans-gate.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/poor-mans-gate.html
@@ -1,4 +1,4 @@
-{% extends "dnd/abstract/place.html" %}
+{% extends "dnd/abstract/place.html" %} {# TODO: update #}
 
 {% block title %}Poor Mans Gate{% endblock %}
 {% block summary %}Entrance to the city mostly used by farmers and the less wealthy.{% endblock %}
