Fix some small things in the city to get the story accross. Put more notes in.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/A0-fish-monopoly.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/A0-fish-monopoly.html
@@ -1,4 +1,5 @@
 <p>The adventurers notice that they are tailed</p>
+<p>Way in through Otalan!</p>
 
 <p>It is thought that the guards are bribed (but they are just incompetent)</p>
 <p>The only competitor left is someone who can do seasoning. This receipe is about to get nicked.</p>
@@ -10,7 +11,7 @@ Discovering Thekesh/Moltabar. What is the way in for these facts? Which leads ar
 * Wear the magic neckless of Thekesh
 * Moltabar smells of fish
 
-Smell of fish shoul be the smell of the slums. Thekesh gets incriminated by Waukeen and by Oracle as a traitor.
+Smell of fish should be the smell of the slums. Thekesh gets incriminated by Waukeen and by Oracle as a traitor.
 
 Waukeen mission
 
