--- a/src/templatefiles/templates/dnd/concrete/obstacles/09-epilogue/index.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/09-epilogue/index.html
@@ -6,5 +6,6 @@
         <li>Thank the adventurers</li>
         <li>If money rises, rise against it.</li>
         <li>Krishnamurti quote?</li>
+        <li>Burst of the bubble</li>
     </ul>
 {% endblock %}
