Update the smell in the slums.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html
@@ -7,7 +7,7 @@
     <p>
         After receiving healing from the taint on the Big Ant Island everybody got appointed a little shack to sleep in.
         All shacks are part of a cave network in the cliff side. They have a beautiful view upon the sea.
-        You were given very simple cloths (1 sp) that smell like fish.
+        You were given very simple cloths (1 sp) that smell like the slums. A mixture of rotting fish and dried sweat
     </p>
 
     <p>
