--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
@@ -24,7 +24,7 @@
 
 {% block locations %}
     <p><b>
-        Nobody is living in this area. There are just a lot of boats and fishing nets everywhere. It smells like rotten fish.
+        Nobody is living in this area. There are just a lot of boats and fishing nets everywhere. The rotten fish smell is particularly strong here.
     </b></p>
 
     <p>Places of interest in this area</p>
